2007-10-27  Paf <paf@tuxfamily.org>
	* src/core/include/cgraphicmodule.cpp: Upgrade to Ogre 1.4

2007-12-19  Gabriel <countag@wanadoo.fr>
	* src/core/include/camerathirperson.h: add map for the key listener, add time for the transformation and add limit rotation
	* src/core/include/camerathirperson.cpp: add map for the key listener, add time for the transformation and add limit rotation
	* src/core/include/camerafreefly.h: add map for the key listener, add time for the transformation
	* src/core/include/camerafreefly.cpp: add map for the key listener, add time for the transformation

2007-10-17  Paf <paf@tuxfamily.org>
	* src/core/tests/testpo.cpp: Update test program
	* src/core/tests/zelda2: Initial release
	* src/core/include/attributehandlerregistry.h: Some includes have been moved
	src/attributehandlerregistry.cpp
	* src/core/include/inheritsattributehandler.h: Initial release
	* src/core/include/inherits.h: Initial release
	* src/core/include/basemanager.h: Add a new method isInstanceInCache()
	* src/core/include/persistentobjectmanager.h: Update includes
	* src/core/include/persistentobject.h: Update includes
	* src/core/src/persistentobjectmanager.cpp: Handle case where content file is empty
	in PersistentObjectManager::loadImpl()
	* src/core/src/inherits.cpp: Initial release
	* src/core/src/inheritsattributehandler.cpp: Initial Release
	* src/core/src/attributehandlerregistry.cpp: Add inherits attribute handler
	* src/core/Makefile : Update source files to compile
	* Makefile.am : Update source files to compile

2007-10-12  Paf <paf@tuxfamily.org>
	* src/core/include/attributehandlerregistry.h: Move #define statements
	* src/core/include/genericattributehandler.h: Move #define statements; Add
	parameter PersistentObject* to methood handle()
	* src/core/include/iattributehandler.h: Move #define statements; Add
	parameter PersistentObject* to method handle() 
	* src/core/include/list.h: Fix includes
	* src/core/include/iattribute.h: Move #define statements