@@ -54,6 +54,8 @@
 #include "../../core/include/camerafixe.h"
 #include "../../core/include/camerafreefly.h"
 #include "../../core/include/camerathirdperson.h"
+#include "../../core/include/camerafirstperson.h"
+#include "../../core/include/cameraspline.h"
 
 #include "../include/cgraphicmodule.h"
 #include "../../config.h"
@@ -92,14 +94,12 @@ void CGraphicModule::init()
 	mSceneMgr = mRoot->createSceneManager("TerrainSceneManager", "TSM");
 
 	// Create and configure the camera
-	Gnoll::Core::Camera* pCamera = new Gnoll::Core::CameraThirdPerson("PlayerCam", mSceneMgr);
+	Gnoll::Core::Camera* pCamera = new Gnoll::Core::CameraSpline("camSpline", mSceneMgr);
 
 	//pCamera->setEye(Vector3(780, 25, 590));
 	//pCamera->setLookAt(Vector3(0, 10, 0));
 	pCamera->setNearDistance(5);
 	pCamera->setFarDistance(1000);
-	static_cast<Gnoll::Core::CameraThirdPerson*>(pCamera)->setLimitRotationX(45.0f);
-	static_cast<Gnoll::Core::CameraThirdPerson*>(pCamera)->setLimitRotationY(90.0f);
 
 	// Create one viewport, entire window
 	Viewport* vp = mwindow->addViewport(&pCamera->getOgreCamera());
@@ -243,8 +243,14 @@ void CGraphicModule::init()
 	eb->setSize(CEGUI::UVector2(cegui_absdim(100), cegui_absdim(70)));
 	eb->setAlwaysOnTop(true);
 
-	static_cast<Gnoll::Core::CameraThirdPerson*>(pCamera)->setTarget(mSceneMgr->getSceneNode("RobotNode"));
-	static_cast<Gnoll::Core::CameraThirdPerson*>(pCamera)->setOffset(70.0f);
+	static_cast<Gnoll::Core::CameraSpline*>(pCamera)->setTarget(mSceneMgr->getSceneNode("RobotNode"));
+	static_cast<Gnoll::Core::CameraSpline*>(pCamera)->setLenght(10);
+	static_cast<Gnoll::Core::CameraSpline*>(pCamera)->addPoint(Ogre::Vector3(30, 10,  10), 0);
+	static_cast<Gnoll::Core::CameraSpline*>(pCamera)->addPoint(Ogre::Vector3(100, 10,  100), 3);
+	static_cast<Gnoll::Core::CameraSpline*>(pCamera)->addPoint(Ogre::Vector3(300, 10,  300), 6);
+	static_cast<Gnoll::Core::CameraSpline*>(pCamera)->addPoint(Ogre::Vector3(30, 10,  10), 9);
+	// start() or stop(), choose or die !
+	static_cast<Gnoll::Core::CameraSpline*>(pCamera)->start();
 }
 
 
